--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         //Score's fruits process
         if(obj.vetor[i].titulo=='amarelo'){var tipoMarcador = 'amarelo'; amarelo+=1;}
         if(obj.vetor[i].titulo=='azul'){var tipoMarcador = 'azul'; azul+=1;}
-        if(obj.vetor[i].titulo=='vermelho'){var tipoMarcador = 'Assaltos'; vermelho+=1;}
+        if(obj.vetor[i].titulo=='vermelho'){var tipoMarcador = 'vermelho'; vermelho+=1;}
         if(obj.vetor[i].titulo=='verde'){var tipoMarcador = 'verde'; verde+=1;}
         if(obj.vetor[i].titulo=='roxo'){var tipoMarcador = 'roxo'; roxo+=1;}
         //End of the Score's fruits process
