--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         vermelho: {
           name: 'pontovermelho',
           icon: iconBase + 'red-dot.png',
-          nameinlegend: 'Vermelho',
+          nameinlegend: 'Assaltos',
           numero: vermelho
         },
         azul: {
