--- a/index.html
+++ b/index.html
@@ -122,25 +122,25 @@
         azul: {
           name: 'pontoazul',
           icon: iconBase + 'blue-dot.png',
-          nameinlegend: 'Azul',
+          nameinlegend: 'Enchentes',
           numero: azul
         },
         verde: {
           name: 'pontoverde',
           icon: iconBase + 'green-dot.png',
-          nameinlegend: 'Verde',
+          nameinlegend: 'Coleta e Reciclagem',
           numero: verde
         },
         amarelo: {
           name: 'pontoamarelo',
           icon: iconBase + 'yellow-dot.png',
-          nameinlegend: 'Amarelo',
+          nameinlegend: 'Doações',
           numero: amarelo
         },
         roxo: {
           name: 'pontoroxo',
           icon: iconBase + 'purple-dot.png',
-          nameinlegend: 'Roxo',
+          nameinlegend: 'Trabalhos voluntarios',
           numero: roxo
         }          
       };
