--- a/index.html
+++ b/index.html
@@ -141,31 +141,31 @@
         vermelho: {
           name: 'pontovermelho',
           icon: iconBase + 'red-dot.png',
-          nameinlegend: 'Vermelho',
+          nameinlegend: 'Assaltos',
           numero: vermelho
         },
         azul: {
           name: 'pontoazul',
           icon: iconBase + 'blue-dot.png',
-          nameinlegend: 'Azul',
+          nameinlegend: 'Enchente',
           numero: azul
         },
         verde: {
           name: 'pontoverde',
           icon: iconBase + 'green-dot.png',
-          nameinlegend: 'Verde',
+          nameinlegend: 'Reciclagem',
           numero: verde
         },
         amarelo: {
           name: 'pontoamarelo',
           icon: iconBase + 'yellow-dot.png',
-          nameinlegend: 'Amarelo',
+          nameinlegend: 'Doações',
           numero: amarelo
         },
         roxo: {
           name: 'pontoroxo',
           icon: iconBase + 'purple-dot.png',
-          nameinlegend: 'Roxo',
+          nameinlegend: 'Voluntarios',
           numero: roxo
         }          
       };
